# aurora

./: README.md
LeRobot-SO101/: README.md
LeRobot-SO101/lerobot/: req_210.txt
LeRobot-SO101/lerobot/docs/: hardware.md
LeRobot-SO101/lerobot/src/lerobot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ros-autonomous-patrol-robot/: README.md
ros-autonomous-patrol-robot/Adaptive Cruise Control/: GT117Z.sh
ros-autonomous-patrol-robot/Adaptive Cruise Control/config/: dwa_local_planner_params.yaml  global_costmap_params.yaml  move_base_params.yaml
ros-autonomous-patrol-robot/Adaptive Cruise Control/launch/: auto_single_point_test.launch  hector_mapping.launch  single_goal_test.launch
ros-autonomous-patrol-robot/Adaptive Cruise Control/launch/include/: amcl.launch（复件）.xml  move_base.launch.xml
ros-autonomous-patrol-robot/Adaptive Cruise Control/maps/: my_lab.yaml
ros-autonomous-patrol-robot/Adaptive Cruise Control/src/TTS_audio/: CMakeLists.txt  package.xml
ros-autonomous-patrol-robot/Adaptive Cruise Control/src/abot_vlm/: CMakeLists.txt  package.xml
ros-autonomous-patrol-robot/Adaptive Cruise Control/src/nav_command/: CMakeLists.txt  package.xml
ros-autonomous-patrol-robot/Adaptive Cruise Control/src/nav_command/msg/: NavCmd.msg
ros-autonomous-patrol-robot/Adaptive Cruise Control/src/ocr_detect/: CMakeLists.txt  package.xml
ros-autonomous-patrol-robot/Adaptive Cruise Control/src/robot_slam/: CMakeLists.txt  package.xml
ros-autonomous-patrol-robot/Adaptive Cruise Control/src/robot_slam/launch/: entry_based_single_goal.launch  gmapping_base.launch  grab.launch  multi_goal.launch  multi_goal1.launch  navigation.launch  random_single_goal_test.launch
ros-autonomous-patrol-robot/Adaptive Cruise Control/src/robot_slam/launch/include/: amcl.launch.xml
ros-autonomous-patrol-robot/Adaptive Cruise Control/src/robot_slam/maps/: my_lab.pgm
ros-autonomous-patrol-robot/Adaptive Cruise Control/src/robot_slam/msg/: NavCmd.msg
ros-autonomous-patrol-robot/Adaptive Cruise Control/src/robot_slam/params/carto/: costmap_common_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
ros-autonomous-patrol-robot/Adaptive Cruise Control/src/robot_slam/rviz/: view_gmapping.rviz  view_navigation.rviz
ros-autonomous-patrol-robot/Adaptive Cruise Control/src/robot_slam/scripts/: .py  auto_single_point_test.py  decoder.py  demo.py  detect.py  entry_based_single_goal.py  lidar_read.py  main.py  pub_point.py  random_single_goal_test.py  single_goal_test.py  start.py
ros-autonomous-patrol-robot/Target shooting/: OB9EVL.sh
ros-autonomous-patrol-robot/Target shooting/launch/: nav_cartographer.launch
ros-autonomous-patrol-robot/Target shooting/src/cam_track/: CMakeLists.txt  package.xml
ros-autonomous-patrol-robot/Target shooting/src/color_pkg/: CMakeLists.txt  package.xml
ros-autonomous-patrol-robot/Target shooting/src/face_pkg/: CMakeLists.txt  package.xml
ros-autonomous-patrol-robot/Target shooting/src/opencv_demo/: CMakeLists.txt  (+1 more)
smart-watch/: .gitignore  readme.md
smart-watch/401/: 401.ioc
smart-watch/401/MDK-ARM/: 401.uvguix.L1883  401.uvoptx  401.uvprojx  startup_stm32f401xe.lst
smart-watch/401/lvgl/: lv_conf.h
(+604 files in other folders)
